ADD biodata anggota

--- a/Tubes-FuzzyLogic-Bengkel.ipynb
+++ b/Tubes-FuzzyLogic-Bengkel.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "649b613c",
+   "metadata": {},
+   "source": [
+    "KELOMPOK 103132430001:\n",
+    "- Nama: Immanuel Raditya Deo Pratama Pambudhi \n",
+    "\n",
+    "- NIM: 103132430001"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a26d7d47",
    "metadata": {},
    "source": [
