--- a/Tubes-FuzzyLogic-Bengkel.ipynb
+++ b/Tubes-FuzzyLogic-Bengkel.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "cfb66d0e",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "4394ec11",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "f1d6f216",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "86b82ce3",
    "metadata": {},
    "outputs": [
@@ -205,8 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "5 BENGKEL TERBAIK:\n",
+      "10 BENGKEL TERBAIK:\n",
       "\n",
       "ID    | Servis   | Harga  | Skor      \n",
       "2     | 93.0     | 9.0    | 100.00\n",
@@ -214,6 +213,11 @@
       "7     | 83.0     | 9.0    | 100.00\n",
       "8     | 87.0     | 8.0    | 100.00\n",
       "9     | 75.0     | 1.0    | 100.00\n",
+      "11    | 88.0     | 8.0    | 100.00\n",
+      "12    | 100.0    | 3.0    | 100.00\n",
+      "16    | 53.0     | 3.0    | 100.00\n",
+      "18    | 88.0     | 5.0    | 100.00\n",
+      "26    | 76.0     | 2.0    | 100.00\n",
       "\n",
       "Kesimpulan bengkel terbaik disimpan di file: Rekomendasi_Bengkel.xls\n"
      ]
@@ -259,12 +263,12 @@
     "        'skor': skorAkhir\n",
     "    })\n",
     "\n",
-    "# Sorting data secara menurun berdasarkan skor & mengambil 5 sampel terbaik\n",
+    "# Sorting data secara menurun berdasarkan skor & mengambil 10 sampel bengkel terbaik\n",
     "hasil_analisis.sort(key=lambda x: x['skor'], reverse=True)\n",
-    "top_5 = hasil_analisis[:5]\n",
-    "print(\"\\n5 BENGKEL TERBAIK:\")\n",
+    "top_10 = hasil_analisis[:10]\n",
+    "print(\"10 BENGKEL TERBAIK:\")\n",
     "print(f\"\\n{'ID':<5} | {'Servis':<8} | {'Harga':<6} | {'Skor':<10}\")\n",
-    "for b in top_5:\n",
+    "for b in top_10:\n",
     "    print(f\"{b['id']:<5} | {b['servis']:<8} | {b['harga']:<6} | {b['skor']:.2f}\")\n",
     "\n",
     "# Simpan kesimpulan di dalam file dalam format .xls\n",
